--- a/AutoFacConsole/AutoFacConsole.csproj
+++ b/AutoFacConsole/AutoFacConsole.csproj
@@ -1,21 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
+    <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AutoFacDAL\AutoFacDAL.csproj" />
     <ProjectReference Include="..\AutoFacIDAL\AutoFacIDAL.csproj" />
+    <ProjectReference Include="..\FacProxy\FacProxy.csproj" />
   </ItemGroup>
 
 </Project>
